auth/mesh/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: auth-gateway
  namespace: auth-provider # TODO: can we refer to variables/templating for kustomize to reduce repetition
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP
